@@ -1287,6 +1287,7 @@ class RemoteBranch(branch.Branch, _RpcHelper):
         # will try to assign to self.tags, which is a property in this subclass.
         # And the parent's __init__ doesn't do much anyway.
         self._revision_id_to_revno_cache = None
+        self._revision_id_to_revno_top_cache = {}
         self._revision_history_cache = None
         self._last_revision_info_cache = None
         self.bzrdir = remote_bzrdir
