@@ -55,7 +55,9 @@ NOT RELEASED YET
 
   INTERNALS:
 
-    * New ``Branch.dotted_revno_to_revision_id()`` API.
+    * New ``Branch.dotted_revno_to_revision_id()`` and
+      ``Branch.revision_id_to_dotted_revno()`` APIs that pick the most
+      efficient way of doing the mapping.
       (Ian Clatworthy)
 
     * ``TreeDelta.show()`` now accepts a ``filter`` parameter allowing log
